@@ -82,12 +82,6 @@ PATCHES PROPOSED TO BACKPORT FROM TRUNK:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ New patches should be added at the end of the list ]
 
-  *) Allow to open cache disk without O_DIRECT, for e.g.
-   tmpfs "disk" cache.
-   Trunk: 653ea0ccc2f14235dee37ec1530bda0bbf09e3bf
-   Jira: https://issues.apache.org/jira/browse/TS-1312
-   +1: zwoop, bcall, jpeach
-
   *) SSL not handling some events properly.
    Trunk: 4ab21b9f7b933f0cd58173158ffaf6dbbaf64e51
    Jira: https://issues.apache.org/jira/browse/TS-1338
