@@ -2,6 +2,9 @@
 Changes with Apache Traffic Server 3.2.1
   *) [TS-1358] Don't link libreadline with all binaries and plugins.
 
+  *) [TS-1362] Allow to open cache disk without O_DIRECT, for e.g. tmpfs
+   "disk" cache.
+
   *) [TS-1361] Fix a endless loop in CacheVC::removeEvent.
    Author: weijin & Hua Cai
 
